test/trivial/diten/printvisibleWrongValue.good
printvisibleWrongValue.chpl:2: error: the argument to get visible symbols must be a literal 'true' or 'false'
